logs/batchjob_2.2737.out
Running on host grad01

Initial Time is Sun 19 Jun 2022 05:57:02 PM -03

Directory is /home/pp12704/t2

This jobs runs on the following nodes:
grad[01-02]

JOB_ID:
2737

Running on folder: 7
with 16 threads
mandelbrot.c: In function ‘main’:
mandelbrot.c:37:43: error: ‘namelen’ undeclared (first use in this function); did you mean ‘mblen’?
   37 |   MPI_Get_processor_name(processor_name, &namelen);
      |                                           ^~~~~~~
      |                                           mblen
mandelbrot.c:37:43: note: each undeclared identifier is reported only once for each function it appears in
running: 500
mandelbrot.c: In function ‘main’:
mandelbrot.c:37:43: error: ‘namelen’ undeclared (first use in this function); did you mean ‘mblen’?
   37 |   MPI_Get_processor_name(processor_name, &namelen);
      |                                           ^~~~~~~
      |                                           mblen
mandelbrot.c:37:43: note: each undeclared identifier is reported only once for each function it appears in
running: 1000
mandelbrot.c: In function ‘main’:
mandelbrot.c:37:43: error: ‘namelen’ undeclared (first use in this function); did you mean ‘mblen’?
   37 |   MPI_Get_processor_name(processor_name, &namelen);
      |                                           ^~~~~~~
      |                                           mblen
mandelbrot.c:37:43: note: each undeclared identifier is reported only once for each function it appears in
running: 1500
mandelbrot.c: In function ‘main’:
mandelbrot.c:37:43: error: ‘namelen’ undeclared (first use in this function); did you mean ‘mblen’?
   37 |   MPI_Get_processor_name(processor_name, &namelen);
      |                                           ^~~~~~~
      |                                           mblen
mandelbrot.c:37:43: note: each undeclared identifier is reported only once for each function it appears in
running: 2000
mandelbrot.c: In function ‘main’:
mandelbrot.c:37:43: error: ‘namelen’ undeclared (first use in this function); did you mean ‘mblen’?
   37 |   MPI_Get_processor_name(processor_name, &namelen);
      |                                           ^~~~~~~
      |                                           mblen
mandelbrot.c:37:43: note: each undeclared identifier is reported only once for each function it appears in
running: 2500
mandelbrot.c: In function ‘main’:
mandelbrot.c:37:43: error: ‘namelen’ undeclared (first use in this function); did you mean ‘mblen’?
   37 |   MPI_Get_processor_name(processor_name, &namelen);
      |                                           ^~~~~~~
      |                                           mblen
mandelbrot.c:37:43: note: each undeclared identifier is reported only once for each function it appears in
running: 3000
mandelbrot.c: In function ‘main’:
mandelbrot.c:37:43: error: ‘namelen’ undeclared (first use in this function); did you mean ‘mblen’?
   37 |   MPI_Get_processor_name(processor_name, &namelen);
      |                                           ^~~~~~~
      |                                           mblen
mandelbrot.c:37:43: note: each undeclared identifier is reported only once for each function it appears in
running: 3500
mandelbrot.c: In function ‘main’:
mandelbrot.c:37:43: error: ‘namelen’ undeclared (first use in this function); did you mean ‘mblen’?
   37 |   MPI_Get_processor_name(processor_name, &namelen);
      |                                           ^~~~~~~
      |                                           mblen
mandelbrot.c:37:43: note: each undeclared identifier is reported only once for each function it appears in
running: 4000
mandelbrot.c: In function ‘main’:
mandelbrot.c:37:43: error: ‘namelen’ undeclared (first use in this function); did you mean ‘mblen’?
   37 |   MPI_Get_processor_name(processor_name, &namelen);
      |                                           ^~~~~~~
      |                                           mblen
mandelbrot.c:37:43: note: each undeclared identifier is reported only once for each function it appears in
running: 4500
mandelbrot.c: In function ‘main’:
mandelbrot.c:37:43: error: ‘namelen’ undeclared (first use in this function); did you mean ‘mblen’?
   37 |   MPI_Get_processor_name(processor_name, &namelen);
      |                                           ^~~~~~~
      |                                           mblen
mandelbrot.c:37:43: note: each undeclared identifier is reported only once for each function it appears in
running: 5000
